--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
     "TokenOptions": {
-        "Audience": "baris@baris.com",
-        "Issuer": "baris@baris.com",
+        "Audience": "www.baris.com",
+        "Issuer": "www.baris.com",
         "AccessTokenExpiration": 10,
         "SecurityKey": "mysupersecretkeymysupersecretkey"
     },
